# yocto_training

./: hints.md
docker/: Dockerfile  README.md  docker-compose.yml
example/: rpi_zero_w.md
gdb/: compile-gdb-for-target.md  remote-debugging-with-vscode.md
image/: bmaptool.md  bzcat.md  create_image.md
layers/: create_new_layer.md
recipes/: add_cmake_git_project.md  add_custom_file.md  using_recipes.md
sdk-cmake-usage/: CMakeLists.txt  ReadMe.md  arm-gcc-toolchain.cmake  main.cxx
sdk-cmake-usage-better/: cmake-sdk.md
sdk-env-usage/: sdk.md
sdk-ext-usage/: external_cmake_project.md
toaster/: install.md
